# projecteqemu

./: BOTSCompile.md  CommittingwithSVN.md  Makefile  ProjectHome.md  Server.sln  Server10.sln  Server11.sln  changelog.txt
EMuShareMem/: Doors.cpp  EMuShareMem.vcproj  EMuShareMem.vcxproj  Items.cpp  NPCFactionLists.h
EQEmuLoginServer/: Database.h  DatabaseMySQL.cpp  DatabaseMySQL.h  DatabasePostgreSQL.h  Main.cpp  serverlist.cpp
EQEmuServer/: CMakeLists.txt  GPL.txt  Makefile  Server.sln  Server10.sln  changelog.txt
branches/CMake/EQEmuServer/: CMakeLists.txt  Makefile  Server10.sln  changelog.txt
branches/CMake/EQEmuServer/CMakeModules/: FindMySQL.cmake
branches/CMake/EQEmuServer/Dependencies/perl_x86/CORE/: av.h  cv.h  iperlsys.h  mydtrace.h  perly.h  warnings.h
branches/CMake/EQEmuServer/EMuShareMem/: CMakeLists.txt  DLLMain.cpp  Doors.h  EMuShareMem.vcxproj  Items.h  MMF.cpp  NPCFactionLists.cpp  NPCTypes.cpp  Opcodes.cpp  SkillCaps.cpp  makefile
branches/CMake/EQEmuServer/EQEmuLoginServer/: CMakeLists.txt  DatabaseMySQL.h  DatabasePostgreSQL.cpp  makefile
branches/CMake/EQEmuServer/common/: BasePacket.h  CMakeLists.txt  EQEMuError.cpp  EQEmuConfig.h  EQEmuConfig_elements.h  EQPacket.h  EQStreamProxy.cpp  EmuTCPConnection.cpp  Mutex.cpp  ProcLauncher.cpp  TCPServer.cpp  crc32.cpp  database.h  dbasync.cpp  dbcore.cpp  dbcore.h  dbmemshare.cpp  debug.h  eq_packet_structs.h  guild_base.h  logtypes.h  opcode_dispatch.h  opcode_map.cpp  rdtsc.cpp  rulesys.cpp  rulesys.h  ruletypes.h  serverinfo.cpp  servertalk.h  timer.h  unix.h
branches/CMake/EQEmuServer/common/patches/: Anniversary.cpp  Client62.cpp  HoT.cpp  HoT_structs.h  Live.h  Live_structs.h  RoF.cpp  RoF.h  RoF_ops.h  RoF_structs.h  SoD.cpp  SoD_ops.h  SoF.cpp  SoF_ops.h  SoF_structs.h  Titanium.cpp  Titanium_structs.h  Underfoot.cpp  Underfoot_ops.h  VoA.cpp  patches.cpp
branches/CMake/EQEmuServer/eqlaunch/: CMakeLists.txt  eqlaunch.vcproj
branches/CMake/EQEmuServer/mysql_x64/include/: my_config.h  mysqld_ername.h
branches/CMake/EQEmuServer/mysql_x64/lib/: libmysql.lib
branches/CMake/EQEmuServer/perl_x64/CORE/: config.h  patchlevel.h  win32iop.h  win32thread.h
branches/CMake/EQEmuServer/perl_x86/CORE/: pad.h  perliol.h
branches/CMake/EQEmuServer/queryserv/: CMakeLists.txt  database.cpp  database.h  queryserv.cpp  queryservconfig.cpp  queryservconfig.h
branches/CMake/EQEmuServer/ucs/: CMakeLists.txt  database.cpp  ucs.cpp  ucs.vcproj
branches/CMake/EQEmuServer/utils/: patch_RoF.conf  patch_VoA.conf  schema.xml
branches/CMake/EQEmuServer/utils/EQExtractor2/EQExtractor2/: GenerateSQLForm.Designer.cs  PatchAugust15-2012.cs  PatchDecember10-2012.cs  PatchGeneric.cs  PatchMarch15-2011.cs  PatchMay12-2011.cs  PatchNov17-2011.cs  PatchOct20-2010.cs  PatchTestSep1-2010.cs  PatchTestSep22-2010.cs  app.config
branches/CMake/EQEmuServer/utils/azone2/: CMakeLists.txt  GLModelViewer.vcproj
branches/CMake/EQEmuServer/utils/defaults/templates/: menu.html  zones.html
branches/CMake/EQEmuServer/utils/deprecated/azone/: Makefile
branches/CMake/EQEmuServer/utils/patches/: patch_RoF.conf
branches/CMake/EQEmuServer/utils/sql/queryserv/: 2268_QueryServ.sql
branches/CMake/EQEmuServer/utils/sql/svn/: 1717_optional_rule_bash_stun_chance.sql  1802_required_doppelganger.sql  1803_required_tasks_xpreward_signed.sql  1804_required_ae_melee_updates.sql  1817_optional_npc_archery_bonus_rule.sql  1847_required_doors_dest_zone_size_32.sql  1908_required_npc_types_definitions.sql  1946_doors.sql  2004_charges_alt_currency.sql  2142_emotes.sql  2159_optional_defensiveproc_rules.sql  2176_required_aa_updates.sql  2208_optional_EnableSoulAbrasionAA.sql  2208_optional_aa_stacking_rule.sql  2283_required_npc_changes.sql  2376_required_aa_updates.sql  2380_optional_merc_data.sql
branches/CMake/EQEmuServer/world/: Adventure.cpp  CMakeLists.txt  EQW.cpp  EQWHTTPHandler.cpp  EQWParser.cpp  World.vcproj  World.vcxproj  World.vcxproj.filters  client.h  clientlist.cpp  clientlist.h  console.h  lfplist.h  perl_EQW.cpp  ucs.cpp  zonelist.cpp  zoneserver.cpp
branches/CMake/EQEmuServer/zone/: CMakeLists.txt  Map.cpp  MobAI.cpp  QuestParserCollection.cpp  StringIDs.h  Zone.mak  Zone.vcproj  Zone.vcxproj.filters  attack.cpp  basic_functions.h  beacon.h  bot.cpp  bot.h  botStructs.h  client.cpp  client.h  client_packet.cpp  command.cpp  command.h  doors.cpp  embparser.cpp  entity.h  faction.h  fearpath.cpp  features.h  guild.cpp  guild_mgr.cpp  inventory.cpp  merc.cpp  merc.h  mob.cpp  mob.h  npc.h  object.h  parser.h  pathing.cpp  perl_PlayerCorpse.cpp  perl_client.cpp  perl_npc.cpp  perlparser.cpp  (+20 more)
chatserver/: chatserver.cpp
common/: BasePacket.h  EMuShareMem.cpp  EQEmuConfig.cpp  EQEmuConfig.h  EQStream.cpp  Item.cpp  MiscFunctions.cpp  MiscFunctions.h  Mutex.h  ZoneNumbers.h  classes.h  database.cpp  database.h  emu_oplist.h  eq_constants.h  eq_packet_structs.h  extprofile.h  guild_base.cpp  item_struct.h  logtypes.h  mail_oplist.h  opcode_dispatch.h  packet_dump.cpp  packet_dump_file.cpp  ptimer.h  races.h  rulesys.cpp  rulesys.h  ruletypes.h  servertalk.h  shareddb.cpp  shareddb.h
mailserver/: makefile  readme.txt
queryserv/: database.cpp  database.h  queryserv.vcproj  queryserv.vcxproj  worldserver.cpp
ucs/: chatchannel.h  clientlist.cpp  clientlist.h  makefile  makefile.common  ucs.cpp
utils/: Makefile  patch_Live.conf  patch_SoD.conf  patch_SoF.conf
wiki/: BOTSCompile.wiki  CommittingwithSVN.wiki
world/: Adventure.h  AdventureManager.cpp  AdventureManager.h  EQLConfig.cpp  LoginServer.cpp  LoginServer.h  LoginServerList.cpp  SoFCharCreateData.h  World.vcproj  World.vcxproj  World.vcxproj.filters  client.cpp  cliententry.cpp  cliententry.h  clientlist.cpp  console.cpp  lfplist.cpp  makefile  makefile.common  net.cpp  ucs.h  wguild_mgr.cpp  worlddb.cpp  worlddb.h  zonelist.cpp  zoneserver.cpp
zone/: AA.cpp  AA.h  MobAI.cpp  Object.cpp  PlayerCorpse.cpp  PlayerCorpse.h  QGlobals.cpp  QuestParserCollection.cpp  Zone.dsp  Zone.vcproj  Zone.vcxproj  Zone.vcxproj.filters  ZonePerl.vcproj  attack.cpp  bot.cpp  (+73 more)
(+1898 files in other folders)
