CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/CMakeModules/" ${CMAKE_MODULE_PATH})

IF(NOT CMAKE_BUILD_TYPE)
    SET(CMAKE_BUILD_TYPE "Debug")
ENDIF(NOT CMAKE_BUILD_TYPE)

IF(MSVC OR MINGW)
    ADD_DEFINITIONS(-D_WINDOWS)
    IF(CMAKE_CL_64)
        ADD_DEFINITIONS(-DWIN64)
    ELSE(CMAKE_CL_64)
        ADD_DEFINITIONS(-DWIN32)
    ENDIF(CMAKE_CL_64)
ENDIF(MSVC OR MINGW)

IF(MSVC)
    IF(CMAKE_CL_64)
        SET(ZLIB_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/zlib_x64")
        SET(MYSQL_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/mysql_x64")
    ELSE(CMAKE_CL_64)
        SET(ZLIB_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/zlib_x86")
        SET(MYSQL_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/mysql_x86")
    ENDIF(CMAKE_CL_64)
    
    OPTION(DISABLE_CRT_SECURE_WARNINGS "Disable Secure CRT Warnings" ON)
    IF(DISABLE_CRT_SECURE_WARNINGS)
        ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
    ENDIF(DISABLE_CRT_SECURE_WARNINGS)
    
    OPTION(USE_MSVC_FAST_FLOATINGPOINT "Use MSVC /fp:fast option" OFF)
    IF(USE_MSVC_FAST_FLOATINGPOINT)
		ADD_DEFINITIONS(/fp:fast)
	ENDIF(USE_MSVC_FAST_FLOATINGPOINT)
ENDIF(MSVC)

IF(UNIX)
ENDIF(UNIX)

ADD_DEFINITIONS(-DEQDEBUG=1)
ADD_DEFINITIONS(-DEMBPERL)
ADD_DEFINITIONS(-DEMBPERL_PLUGIN)
ADD_DEFINITIONS(-DSHAREMEM)
ADD_DEFINITIONS(-DINVERSEXY)
ADD_DEFINITIONS(-DFIELD_ITEMS)

FOREACH(flag_var CMAKE_CXX_FLAGS_DEBUG CMAKE_CXX_FLAGS_MINSIZEREL CMAKE_CXX_FLAGS_RELEASE CMAKE_CXX_FLAGS_RELWITHDEBINFO CMAKE_C_FLAGS_DEBUG CMAKE_C_FLAGS_MINSIZEREL CMAKE_C_FLAGS_RELEASE CMAKE_C_FLAGS_RELWITHDEBINFO)
    IF(${flag_var} MATCHES "/MD")
        STRING(REGEX REPLACE "/MD" "/MT" ${flag_var} "${${flag_var}}")
    ENDIF(${flag_var} MATCHES "/MD")
ENDFOREACH(flag_var)

IF(UNIX)
    FIND_PACKAGE(ZLIB REQUIRED)
    INCLUDE_DIRECTORIES("${ZLIB_INCLUDE_DIRS}")
    
    EXECUTE_PROCESS(COMMAND "perl" "-MExtUtils::Embed" "-e" "ccopts"
        WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
        OUTPUT_VARIABLE perl_ccopts)
        
    EXECUTE_PROCESS(COMMAND "perl" "-MExtUtils::Embed" "-e" "ldopts"
        WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
        OUTPUT_VARIABLE perl_ldopts)
        
    EXECUTE_PROCESS(COMMAND "mysql_config" "--cflags"
        WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
        OUTPUT_VARIABLE mysql_ccopts)
        
    EXECUTE_PROCESS(COMMAND "mysql_config" "--libs"
        WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
        OUTPUT_VARIABLE mysql_ldopts)
ELSEIF(WIN32)
    FIND_PACKAGE(ZLIB REQUIRED)
    FIND_PACKAGE(PerlLibs REQUIRED)
    FIND_PACKAGE(MySQL REQUIRED)
    INCLUDE_DIRECTORIES("${ZLIB_INCLUDE_DIRS}" "${PERL_INCLUDE_PATH}" "${MySQL_INCLUDE_DIR}")
ENDIF()

ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(EMuShareMem)
ADD_SUBDIRECTORY(world)
ADD_SUBDIRECTORY(zone)